--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,17 @@
 
+.nav-bar{
+  margin-left: -300px;
+}
+
+
+.menu-button {
+  padding: 0;
+  color: black;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif; */
+}
+
 
 body {
   margin: 0;
@@ -20,16 +33,16 @@ code {
   box-sizing: border-box;
 }
 
-body {
+/* body {
   background: #f6f5f7;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  display: auto;
+  /* justify-content: center; 
+  align-items: center; */
+  /* flex-direction: column; 
   font-family: 'Montserrat', sans-serif;
   height: 100vh;
-  margin: -20px 0 50px;
-}
+  /* margin: -20px 0 50px; 
+} */
 
 .signup-h1 {
   font-weight: bold;
@@ -257,19 +270,36 @@ button {
   background: linear-gradient(#e66465, #9198e5);
 } */
 
-#root>div {
-  display: flex;
-  flex-direction: column;
+/* swipe buttons  */
+.swipe-right {
+  padding-top: 5px;
+  font-size: medium;
+  text-align: center;
   justify-content: center;
-  align-items: center;
+  display: flex;
 }
 
-.app>div {
+.card-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* #root>div {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
+  
+} */
+
+/* .app>div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} */
 
 .h1 {
   font-family: 'Damion', cursive;
@@ -284,6 +314,8 @@ button {
   width: 90vw;
   max-width: 260px;
   height: 300px;
+  justify-content: center;
+    align-items: center;
 }
 
 .card {
