--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background: linear-gradient(to right, #EB0F59, #7D5EF1); */
+
 }
 
 code {
@@ -51,13 +53,13 @@ code {
 
 .signup-h2 {
   text-align: center;
-  font-size: 16px;
+  font-size: 18px;
   letter-spacing: 0.5px;
   
 }
 
 .signup-p {
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 100;
   line-height: 20px;
   letter-spacing: 0.5px;
@@ -85,12 +87,13 @@ a {
 
 button {
   border-radius: 20px;
-  border: 1px solid #FF4B2B;
-  background-color: #FF4B2B;
+  border: 1px solid #FFFFFF;
+  background-color: #EB0F59;
   color: #FFFFFF;
   font-size: 12px;
   font-weight: bold;
   padding: 12px 45px;
+  padding-top:10px;
   letter-spacing: 1px;
   text-transform: uppercase;
   transition: transform 80ms ease-in; 
@@ -105,6 +108,15 @@ button {
   letter-spacing: 1px;
   text-transform: uppercase;
   border: 1px solid ;
+}
+
+.homepage {
+    justify-content: center;
+      align-items: center;
+      display: flex;
+    padding-top: 9%;
+
+    position: relative
 }
 
 .homepage-form {
@@ -129,13 +141,15 @@ button {
 .container {
   background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
-    0 10px 10px rgba(0, 0, 0, 0.22);
+  box-shadow: 0 14px 28px rgba(249, 243, 243, 0.25),
+    0 10px 10px #ffff(233, 229, 229, 0.22);
   position: relative;
   overflow: hidden;
-  width: 768px;
+  width: 800px;
   max-width: 100%;
-  min-height: 480px;
+  min-height: 500px;
+  top: 50%;
+  
 }
 
 .form-container {
@@ -150,7 +164,7 @@ button {
   width: 50%;
   background-color: #FFFFFF;
     align-items: center;
-    padding: 0 50px;
+    padding: 0 55px ;
     justify-content: center;
     flex-direction: column;
     height: 100%;
@@ -206,8 +220,8 @@ button {
 
 .overlay {
   background: #FF416C;
-  background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-  background: linear-gradient(to right, #FF4B2B, #FF416C);
+  /* background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C); */
+  /* background: linear-gradient(to right, #EB0F59, #7D5EF1); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
@@ -279,7 +293,17 @@ button {
   display: flex;
 }
 
+.h1-card{
+  font-size: 40px;
+  padding-top: 10px;
+  padding-bottom: 30px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
 .card-center {
+    padding-top: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -308,27 +332,28 @@ button {
 }
 .swipe {
   position: absolute;
+  height: 400px;
 }
 
 .cardContainer {
   width: 90vw;
   max-width: 260px;
-  height: 300px;
+  height: 425px;
   justify-content: center;
-    align-items: center;
+  align-items: center;
 }
 
 .card {
   position: relative;
   background-color: #fff;
-  width: 80vw;
-  max-width: 260px;
-  height: 300px;
+  width: 300vh;
+  max-width: 300px;
+  height: 400px;
   box-shadow: 0px 0px 60px 0px rgba(0, 0, 0, 0.30);
   border-radius: 20px;
   background-size: cover;
   background-position: center;
-  object-fit: auto;
+  /* object-fit: auto; */
   background-size: cover;
 }
 
@@ -352,9 +377,9 @@ button {
 .infoText {
   width: 100%;
   height: 18px;
-  justify-content: center;
+  justify-content: bottom;
   display: flex;
-  color: #fff;
+  color: rgb(17, 16, 16);
   animation-name: popup;
   animation-duration: 800ms;
   bottom: 0px
@@ -489,4 +514,117 @@ button {
   100% {
     opacity: 0;
   }
+}
+
+/* MY PROFILE PAGE */
+.sign-in-container-profile {
+  /* left: 0; */
+  width: 60%;
+  background-color: #FFFFFF;
+  align-items: center;
+  /* padding: 0 55px; */
+  justify-content: center;
+  flex-direction: column;
+  /* height: 100%; */
+  max-height: 560px;
+  text-align: center;
+  padding-bottom: 15%
+}
+
+.container-profile {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(249, 243, 243, 0.25),
+    0 10px 10px #ffff(233, 229, 229, 0.22);
+  position: relative;
+  overflow: auto;
+  width: 800px;
+  max-width: 100%;
+  min-height: 560px;
+  /* top: 50%; */
+
+}
+
+.form-container-profile {
+  position: absolute;
+  /* top: 0; */
+  height: 100%;
+  transition: all 0.6s ease-in-out;
+}
+
+.overlay-container-profile {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: auto;
+  z-index: 100;
+}
+
+.overlay-profile {
+  background: #27182F;
+  /* background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C); */
+  /* background: linear-gradient(to right, #EB0F59, #7D5EF1); */
+  /* background-repeat: no-repeat; */
+  /* background-size: cover; */
+  /* background-position: 0 0; */
+  color: #FFFFFF;
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.overlay-panel-profile {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  padding-top:10%;
+  flex-direction: column;
+  padding: 100 40px;
+  text-align: left;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  transform: translateX(0);
+}
+
+.grid-container{
+  display: grid;
+  /* grid-template-columns: auto 100px; */
+  align-items: left;
+grid-template-columns:150px 100px   ; 
+  /* grid-template-rows: 10px 50px ;  */
+  /* justify-content: left; */
+}
+
+.item1{
+  grid-column: 1;
+}
+.item2 {
+  grid-column: 2;
+}
+
+.ghost-profile {
+  background-color: transparent;
+  border-color: #FFFFFF;
+  border-radius: 20px;
+  font-size: 9px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  border: 1px solid;
+    cursor: pointer;
+}
+.homepage-profile {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  /* padding-top: 9%; */
+
+  position: relative
 }
