--- a/client/src/index.css
+++ b/client/src/index.css
@@ -537,19 +537,18 @@ button {
   box-shadow: 0 14px 28px rgba(249, 243, 243, 0.25),
     0 10px 10px #ffff(233, 229, 229, 0.22);
   position: relative;
-  overflow: auto;
+  align-items: center;
+  overflow: hidden;
   width: 800px;
   max-width: 100%;
   min-height: 560px;
-  /* top: 50%; */
+
 
 }
 
 .form-container-profile {
   position: absolute;
-  /* top: 0; */
   height: 100%;
-  transition: all 0.6s ease-in-out;
 }
 
 .overlay-container-profile {
@@ -558,7 +557,7 @@ button {
   left: 50%;
   width: 50%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   z-index: 100;
 }
 
@@ -574,30 +573,29 @@ button {
   left: -100%;
   height: 100%;
   width: 200%;
-  transform: translateX(0);
-  transition: transform 0.6s ease-in-out;
+
 }
 
 .overlay-panel-profile {
   position: absolute;
   display: flex;
   align-items: center;
-  /* justify-content: center; */
-  padding-top:10%;
+   justify-content: center; 
+  padding-top: 5%;
   flex-direction: column;
-  padding: 100 40px;
+  /* padding: 100 40px; */
   text-align: left;
   top: 0;
-  height: 100%;
+  height: 92%;
   width: 50%;
-  transform: translateX(0);
-}
+ 
+} 
 
 .grid-container{
   display: grid;
   /* grid-template-columns: auto 100px; */
   align-items: left;
-grid-template-columns:150px 100px   ; 
+  grid-template-columns:150px 100px   ; 
   /* grid-template-rows: 10px 50px ;  */
   /* justify-content: left; */
 }
@@ -620,11 +618,12 @@ grid-template-columns:150px 100px   ;
   border: 1px solid;
     cursor: pointer;
 }
+
+
 .homepage-profile {
   justify-content: center;
   align-items: center;
   display: flex;
-  /* padding-top: 9%; */
-
+  padding-top: 2%; 
   position: relative
 }
