--- a/client/src/index.css
+++ b/client/src/index.css
@@ -97,6 +97,7 @@ button {
   letter-spacing: 1px;
   text-transform: uppercase;
   transition: transform 80ms ease-in; 
+  cursor: pointer;
 }
 
 .ghost {
@@ -616,7 +617,7 @@ button {
   letter-spacing: 1px;
   text-transform: uppercase;
   border: 1px solid;
-    cursor: pointer;
+  cursor: pointer;
 }
 
 
@@ -626,4 +627,14 @@ button {
   display: flex;
   padding-top: 2%; 
   position: relative
+}
+
+.no-matches {
+  padding-bottom: 400px;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  text-align: center;
+  color: #27182F;
+  width: 190%;
 }
