--- a/client/src/index.css
+++ b/client/src/index.css
@@ -115,8 +115,7 @@ button {
     justify-content: center;
       align-items: center;
       display: flex;
-    padding-top: 9%;
-
+    padding-top: 5%;
     position: relative
 }
 
@@ -134,7 +133,7 @@ button {
 .signup-input {
   background-color: #eee;
   border: none;
-  padding: 12px 15px;
+  padding: 12px 12px; 
   margin: 8px 0;
   width: 100%;
 }
@@ -160,7 +159,7 @@ button {
   transition: all 0.6s ease-in-out;
 }
 
-.sign-in-container {
+.create-container {
   /* left: 0; */
   width: 50%;
   background-color: #FFFFFF;
@@ -173,6 +172,19 @@ button {
     padding-top: 15%
 }
 
+.sign-in-container {
+  /* left: 0; */
+  /* width: 50%; */
+  background-color: #FFFFFF;
+  align-items: center;
+  /* padding: 0 55px ; */
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+  width: 65%;
+  text-align: center;
+  padding-top: 30%
+}
 
 
 .sign-up-container {
@@ -334,7 +346,6 @@ button {
 .swipe {
   position: absolute;
   height: 400px;
-
 }
 
 .cardContainer {
@@ -692,4 +703,5 @@ button {
   text-align: center;
   color: #27182F;
   width: 190%;
+  padding-right: 120px;
 }
