--- a/client/src/index.css
+++ b/client/src/index.css
@@ -116,7 +116,8 @@ button {
       align-items: center;
       display: flex;
     padding-top: 5%;
-    position: relative
+    position: relative;
+    background-color: "white"
 }
 
 .homepage-form {
