--- a/client/src/index.css
+++ b/client/src/index.css
@@ -347,6 +347,7 @@ button {
 .swipe {
   position: absolute;
   height: 400px;
+  justify-content: center;
 }
 
 .cardContainer {
@@ -364,7 +365,7 @@ button {
   width: 300vh;
   max-width: 300px;
   height: 450px;
-  box-shadow: 0px 0px 60px 0px rgba(0, 0, 0.10, 0.30);
+  box-shadow: 0px 0px 20px 0px white(0, 0, 0.10, 0.30); 
   border-radius: 20px;
   background-size: cover;
   background-position: center;
